@@ -1,0 +1,1 @@
+{"document":{"sAttribute":["text"],"format":["### ",""]},"paragraphs":{"sAttribute":["p_type"],"format":{"meta":["### ",""],"title":["## ",""],"teaser":["_","_\n"],"body":["","\n"],"highlight":["_","_\n"],"headline":["# ",""]}}}
