@@ -1,0 +1,1 @@
+{"metadata":["text_speaker","text_date","text_party"],"document":{"sAttribute":["text"],"format":["\n### ","\n"]},"speech":{"sAttribute":["text_type"],"format":{"speech":["",""],"interjection":["\n> ","\n"]}}}
